fix spacing issue, update save/delete btn styling

--- a/front-end/styles/styleContactManagerHome.css
+++ b/front-end/styles/styleContactManagerHome.css
@@ -37,7 +37,7 @@ th {
 /* the little row divs which contain each type of info for each contact */
 td {
   background: rgba(20, 20, 20, 0.75);
-  width: 50%;
+  width: 35%;
   padding: 0.5rem;
   letter-spacing: 1px;
 }
@@ -104,7 +104,7 @@ button {
 .delete-btn:active,
 .delete-btn:focus,
 .delete-btn:hover {
-  /* background-color: rgba(0, 0, 0, 0.897); */
+  background-color: #96303098;
   box-shadow: 0px 0px 13.8px 1px rgba(255, 255, 255, 0.3);
   text-decoration: underline;
 }
@@ -112,7 +112,7 @@ button {
 .save-btn {
   border-left: 1px solid #fff;
   cursor: pointer;
-  background-color: #31632a5e;
+  background-color: #36832b81;
   margin-right: 1rem;
   margin-bottom: 0.5rem;
 }
